# lingual

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflow/: rust.yml
.github/workflows/: rust.yml
src/: blocking.rs  cfg.rs  errors.rs  language.rs  lib.rs  non_blocking.rs  token.rs  translation.rs  url.rs  wasm.rs
src/langs/: accurate.rs  all.rs  mod.rs
src/translator/: mod.rs
src/translator/deepl/: backoff.rs  free.rs  mod.rs  pro.rs
src/translator/google/: free.rs  mod.rs  token.rs  url.rs
tests/: mod.rs
