[package]
name = "lingual"
version = "1.0.8"
edition = "2021"
description = "Free and Unlimited Language Translation (Google) API for Rust. Supports Async and Sync."
authors = ["Deep Patel <deepp0925>"]
readme = "README.md"
repository = "https://github.com/deepp0925/lingual"
homepage = "https://github.com/deepp0925/lingual"
documentation = "https://docs.rs/lingual"
license = "MIT"
keywords = ["Locale", "Localization", "i18n", "Internationalization", "Translation"]
categories = [ "localization", "internationalization"]

[lib]
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum={version = "0.25.0", features = ["derive"]}
reqwest = { version = "0.11.18", default-features = false, features = ["json"], optional = true }
gloo-net = {version = "0.4.0", default-features = false, features = ["json", "http"], optional = true}
serde_json = "1.0.100"
serde = {version = "1.0.185", features = ["derive"]}
sqlx = {version = "0.7", features = ["sqlite", "runtime-tokio-rustls"], optional=true}

[dev-dependencies]
tokio = {version = "1.29.1", features = ["rt", "macros"]}
welds = {version = "0.2", features = ["sqlite"]}

[features]
default = ["non-blocking"]
sqlx = ["dep:sqlx"]
non-blocking = ["reqwest"]
blocking = ["reqwest/blocking" ]
wasm = ["gloo-net"]


[[test]]
name = "all_tests"
path = "tests/mod.rs"


