[package]
name = "lingual"
version = "1.0.8"
edition = "2021"
description = "Free and Unlimited Language Translation (Google) API for Rust. Supports Async and Sync."
authors = ["Deep Patel <deepp0925>"]
readme = "README.md"
repository = "https://github.com/deepp0925/lingual"
homepage = "https://github.com/deepp0925/lingual"
documentation = "https://docs.rs/lingual"
license = "MIT"
keywords = ["Locale", "Localization", "i18n", "Internationalization", "Translation"]
categories = [ "localization", "internationalization"]

[lib]
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
errors = {path = "../errors"}
strum={version = "0.25.0", features = ["derive"]}
reqwest = { version = "0.11.18", default-features = false, features = ["json"] }
serde_json = "1.0.100"
serde = {version = "1.0.185", features = ["derive"]}
once_cell = "1.18.0"
regex = "1.9.6"

[dev-dependencies]
tokio = {version = "1.29.1", features = ["rt", "macros"]}

[features]
blocking = ["reqwest/blocking"]


[[test]]
name = "tests"
path = "tests/mod.rs"




