[package]
name = "lingual"
version = "1.1.0"
edition = "2021"
description = "Free and Unlimited Language Translation (Google) API for Rust. Supports Async and Sync."
authors = ["Deep Patel <deepp0925>"]
readme = "README.md"
repository = "https://github.com/deepp0925/lingual"
homepage = "https://github.com/deepp0925/lingual"
documentation = "https://docs.rs/lingual"
license = "MIT"
keywords = ["Locale", "Localization", "i18n", "Internationalization", "Translation"]
categories = [ "localization", "internationalization"]

[lib]
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum={version = "0.26", features = ["derive"]}
reqwest = { version = "0.11", default-features = false, features = ["json"] }
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}
once_cell = "1.18"
regex = "1.9"
remove-async-await = {version="1.0", optional = true}
tokio = {version = "1.29", default-features = false, features = ["time"]}
rand = "0.8"

[dev-dependencies]
tokio = {version = "1.29.1", features = ["rt", "macros"]}

[features]
blocking = ["reqwest/blocking", "remove-async-await"]


[[test]]
name = "tests"
path = "tests/mod.rs"




